# runbook-ai

./: .gitignore  CHANGELOG.md  Cargo.toml  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: docs.html  index.html
docs/releases/: v0.1.0.md
src/: ai.rs  cli.rs  command.rs  config.rs  detect.rs  doctor.rs  export.rs  git.rs  main.rs  mcp.rs  models.rs  redact.rs  render.rs  session.rs  util.rs
tests/: integration_tests.rs
