[package]
name = "runbookai"
version = "0.1.0"
edition = "2021"
description = "Turn AI coding agent sessions into reusable runbooks, changelogs, and postmortems."
license = "MIT"
repository = "https://github.com/arsyadal/runbook-ai"

[[bin]]
name = "runbookai"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"
