[package]
name = "runbook"
version = "0.1.0"
edition = "2021"
description = "Turn AI coding agent sessions into reusable runbooks, changelogs, and postmortems."
license = "MIT"
repository = "https://github.com/arsyadal/runbook-ai"

[[bin]]
name = "runbook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
handlebars = "6.4.1"
regex = "1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
slug = "0.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"
